# CommentAIAssistant

./: .gitignore  Modelfile  README.md  app.py  celery.Dockerfile  docker-compose.yml  env_example  fastapi.Dockerfile  pyproject.toml  settings.py
agent/: agent.py  agent_role.md
celery_app/: config.py  tasks.py
db/: db_models.py  db_services.py  db_setup.py
logger/: logger.py
models/: response_models.py
routers/: articles.py  auth.py  comments.py  services.py
tests/: test_endpoints.py
